@@ -1,3 +1,7 @@
+Thu Jan 21 14:39:15 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/config.c:
+	- Really override server settings using extended server syntax
+
 Thu Jan 21 09:33:32 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* Makefile.am src/dblib/Makefile.am src/replacements/Makefile.am:
 	* src/tds/Makefile.am:
@@ -2137,4 +2141,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2942 2010/01/21 08:34:04 freddy77 Exp $
+$Id: ChangeLog,v 1.2943 2010/01/21 13:41:31 freddy77 Exp $
